FIxed map buttons bleeding outside
Fixed map buttons when legend is shown.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,7 +114,7 @@ body {
 
 /* Holds the map element */
 .map-container {
-  padding-top: 1rem;
+  padding-top: 3rem;
 
   display: flex;
   align-items: center;
